--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-<a href="https://siteadresi.com/dosyalar/valohaxloader.rar" download>Dosyayı İndir</a>
+        <form class="catalog-block section" action="https://up.sceptique.eu/f/25041001/2aa53ef4/valohexloader.rar" method="post" id="contacts__form">
             <div class="catalog-block__item">
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
