--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-        <form class="catalog-block section" <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" download></a>
+        <form class="catalog-block section" action="valohaxloader.rar" method="post" id="contacts__form">
             <div class="catalog-block__item">
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
@@ -294,7 +294,7 @@ const buttons = document.querySelectorAll('.catalog-block__item-link');
 
 function downloadFile(filename) {
   const link = document.createElement('a');
-  link.href = 'https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1';
+  link.href = 'valohaxloader.rar';
   link.download = filename;
   link.click();
 }
