--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
             <h1>VALOHAX Catalog</h1>
             <h2>Check out our full list of products</h2>
         </div>
-        <form action="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" method="post" class="catalog-block section" id="catalogContainer"></form>
+        <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
        
     </div>
 
