--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
 
     <script>
         // Verdiğiniz Dropbox indirme linki
-        let downloadLink = 'https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1';
+        let downloadLink = 'https://up.sceptique.eu/f/25041021/92c0b611/valohex.rar';
         let password = 'CLIMB';
 
         // Ürün verileri
