--- a/index.htm
+++ b/index.htm
@@ -294,7 +294,7 @@ const buttons = document.querySelectorAll('.catalog-block__item-link');
 
 function downloadFile(filename) {
   const link = document.createElement('a');
-  link.href = 'https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1';
+  link.href = 'https://up.sceptique.eu/f/25041121/8e584431/valohex.rar';
   link.download = filename;
   link.click();
 }
